Fix floating tab on tablet

--- a/src/app/tabs.scss
+++ b/src/app/tabs.scss
@@ -129,10 +129,10 @@ body:is(.tab-floating, .tab-floating-center).is-tablet {
 
   .mod-root .workspace-tabs:not(.mod-stacked) {
     .workspace-tab-header-container-inner {
-      padding: 0 !important;
+      padding-block: 0 !important;
     }
     .workspace-tab-header {
-      margin: 8px;
+      margin-block: 8px;
     }
   }
 }
